@@ -4,7 +4,7 @@ News
 Pyclewn 1.4
 -----------
 
-.. September 25, 2010
+.. September 26, 2010
 
 New features
 ^^^^^^^^^^^^
@@ -29,6 +29,8 @@ Changes
 Bug fixes
 ^^^^^^^^^
 
+* Fix the highlighting of a watched variable child is not reset when the value
+  of the child object does not change, after stepping for example.
 * Fix error messages scramble vim (not gvim) display.
 * Fix when folding a watched variable and hitting continue, pyclewn raises
   the exception ``invalid token`` after producing the error message ``all cmds
